GNOME Bugzilla – Bug 723769
gnome-control-center-3.11.5 fails to build: 'nm_setting_team_get_type' undeclared
Last modified: 2014-02-18 15:54:19 UTC
Hi, i'm try to build g-c-c 3.11.5 but have error. Networkmanager version: 0.9.8.8 nm-applet version: 0.9.8.8 Log : ... make all-am make[6]: Entering directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels/network/connection-editor' /bin/sh ../../../libtool --tag=CC --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN="\"-cc-panel\"" -DPANEL_ID="\"\"" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\""/etc/NetworkManager/VPN"\" -DNM_VPN_MODULE_DIR=\""/usr/lib/NetworkManager"\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-net-connection-editor.lo -MD -MP -MF .deps/libconnection_editor_la-net-connection-editor.Tpo -c -o libconnection_editor_la-net-connection-editor.lo `test -f 'net-connection-editor.c' || echo './'`net-connection-editor.c /bin/sh ../../../libtool --tag=CC --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN="\"-cc-panel\"" -DPANEL_ID="\"\"" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\""/etc/NetworkManager/VPN"\" -DNM_VPN_MODULE_DIR=\""/usr/lib/NetworkManager"\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-security.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-security.Tpo -c -o libconnection_editor_la-ce-page-security.lo `test -f 'ce-page-security.c' || echo './'`ce-page-security.c /bin/sh ../../../libtool --tag=CC --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN="\"-cc-panel\"" -DPANEL_ID="\"\"" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\""/etc/NetworkManager/VPN"\" -DNM_VPN_MODULE_DIR=\""/usr/lib/NetworkManager"\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-reset.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-reset.Tpo -c -o libconnection_editor_la-ce-page-reset.lo `test -f 'ce-page-reset.c' || echo './'`ce-page-reset.c /bin/sh ../../../libtool --tag=CC --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN="\"-cc-panel\"" -DPANEL_ID="\"\"" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\""/etc/NetworkManager/VPN"\" -DNM_VPN_MODULE_DIR=\""/usr/lib/NetworkManager"\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-ethernet.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-ethernet.Tpo -c -o libconnection_editor_la-ce-page-ethernet.lo `test -f 'ce-page-ethernet.c' || echo './'`ce-page-ethernet.c libtool: compile: gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN=\"-cc-panel\" -DPANEL_ID=\"\" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\"/etc/NetworkManager/VPN\" -DNM_VPN_MODULE_DIR=\"/usr/lib/NetworkManager\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-net-connection-editor.lo -MD -MP -MF .deps/libconnection_editor_la-net-connection-editor.Tpo -c net-connection-editor.c -fPIC -DPIC -o .libs/libconnection_editor_la-net-connection-editor.o libtool: compile: gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN=\"-cc-panel\" -DPANEL_ID=\"\" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\"/etc/NetworkManager/VPN\" -DNM_VPN_MODULE_DIR=\"/usr/lib/NetworkManager\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-reset.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-reset.Tpo -c ce-page-reset.c -fPIC -DPIC -o .libs/libconnection_editor_la-ce-page-reset.o libtool: compile: gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN=\"-cc-panel\" -DPANEL_ID=\"\" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\"/etc/NetworkManager/VPN\" -DNM_VPN_MODULE_DIR=\"/usr/lib/NetworkManager\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-security.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-security.Tpo -c ce-page-security.c -fPIC -DPIC -o .libs/libconnection_editor_la-ce-page-security.o libtool: compile: gcc -DHAVE_CONFIG_H -I. -I../../.. -I../../../ -DG_LOG_DOMAIN=\"-cc-panel\" -DPANEL_ID=\"\" -I./../wireless-security -pthread -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/gsettings-desktop-schemas -pthread -I/usr/include/NetworkManager -I/usr/include/libnm-glib -I/usr/include/dbus-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/dbus-1.0/include -I/usr/include/libnm-gtk -I/usr/include/gtk-3.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/libmm-glib -I/usr/include/ModemManager -DNM_VPN_CONFIG_DIR=\"/etc/NetworkManager/VPN\" -DNM_VPN_MODULE_DIR=\"/usr/lib/NetworkManager\" -march=x86-64 -mtune=generic -O2 -pipe -I/usr/include/cheese -I/usr/include/gstreamer-1.0 -I/usr/include/libxml2 -MT libconnection_editor_la-ce-page-ethernet.lo -MD -MP -MF .deps/libconnection_editor_la-ce-page-ethernet.Tpo -c ce-page-ethernet.c -fPIC -DPIC -o .libs/libconnection_editor_la-ce-page-ethernet.o net-connection-editor.c:597:23: error: 'nm_setting_team_get_type' undeclared here (not in a function) make[6]: *** [libconnection_editor_la-net-connection-editor.lo] Error 1 make[6]: *** Waiting for unfinished jobs.... mv -f .deps/libconnection_editor_la-ce-page-reset.Tpo .deps/libconnection_editor_la-ce-page-reset.Plo mv -f .deps/libconnection_editor_la-ce-page-ethernet.Tpo .deps/libconnection_editor_la-ce-page-ethernet.Plo mv -f .deps/libconnection_editor_la-ce-page-security.Tpo .deps/libconnection_editor_la-ce-page-security.Plo make[6]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels/network/connection-editor' make[5]: *** [all] Error 2 make[5]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels/network/connection-editor' make[4]: *** [all-recursive] Error 1 make[4]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels/network' make[3]: *** [all] Error 2 make[3]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels/network' make[2]: *** [all-recursive] Error 1 make[2]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5/panels' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/var/tmp/fst/src/gnome-control-center-3.11.5' make: *** [all] Error 2 Thanks
*** Bug 723799 has been marked as a duplicate of this bug. ***
Answering to comment #1 of Bug 723799 > I believe the plan here is to ifdef the team code out so that it builds with > latest released NM. I don't think that effort is in anyway needed /useful: gnome-settings-daemon required geoclue 2.1.2, which in turn as well requires libnm-glib >= 0.9.9.0; Unless this dependency is also lowered, I would not see a way to install a full GNOME 3.12 stack without a NM recent enough (and unreleased at this moment)
Created attachment 268903 [details] [review] network: Fix build with NM 0.9.8.x Team support was only added in the 0.9.9.x branch for the 0.9.10 stable release. It's not available in any releases (beta or stable ones) yet.
Created attachment 268904 [details] [review] network: Fix build with NM 0.9.8.x Team support was only added in the 0.9.9.x branch for the 0.9.10 stable release. It's not available in any releases (beta or stable ones) yet.
Please test.
Review of attachment 268904 [details] [review]: ::: panels/network/Makefile.am @@ +50,3 @@ cc-network-panel.h +TEAM_FILES = net-device-team.c net-device-team.h But you didn't remove them from libnetwork_la_SOURCES @@ +51,3 @@ +TEAM_FILES = net-device-team.c net-device-team.h +EXTRA_DIST = $(TEAM_FILES) Shouldn't EXTRA_DIST only include these files in the !HAVE_NM_UNSTABLE case?
Created attachment 268906 [details] [review] network: Fix build with NM 0.9.8.x Team support was only added in the 0.9.9.x branch for the 0.9.10 stable release. It's not available in any releases (beta or stable ones) yet.
(In reply to comment #6) > Review of attachment 268904 [details] [review]: > > ::: panels/network/Makefile.am > @@ +50,3 @@ > cc-network-panel.h > > +TEAM_FILES = net-device-team.c net-device-team.h > > But you didn't remove them from libnetwork_la_SOURCES Done. > @@ +51,3 @@ > > +TEAM_FILES = net-device-team.c net-device-team.h > +EXTRA_DIST = $(TEAM_FILES) > > Shouldn't EXTRA_DIST only include these files in the !HAVE_NM_UNSTABLE case? It won't hurt, no.
Attachment 268906 [details] pushed as f31dbd0 - network: Fix build with NM 0.9.8.x
(In reply to comment #9) > Attachment 268906 [details] pushed as f31dbd0 - network: Fix build with NM 0.9.8.x Bastien, this patch is probably needed on both the 3.10 and 3.8 branches as well, correct?