network: Fix build with NM 0.9.8.x

Team support was only added in the 0.9.9.x branch for the 0.9.10
stable release. It's not available in any releases (beta or stable
ones) yet.

https://bugzilla.gnome.org/show_bug.cgi?id=723769

Conflicts:
	configure.ac
	panels/network/connection-editor/net-connection-editor.c